<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:paddingVertical="30dp">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_empty_content"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/lottie_error_occurred" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/HeaderText"
        android:layout_marginTop="30dp"
        android:text="@string/image_recognition_failed_title" />

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/DescriptionText"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="20dp"
        android:textAlignment="center"
        android:text="@string/image_recognition_failed_message" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_close"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/close"
        android:textAllCaps="false"
        android:backgroundTint="@android:color/holo_red_light"
        android:textColor="@android:color/white"
        app:cornerRadius="40dp" />
</LinearLayout>